--- a/index.html
+++ b/index.html
@@ -59,12 +59,22 @@
 </div>
 <!-- Portfolio Section -->
 <div id="portfolio">
-    <img class="project-img" src="img/publication1_1.png">
-    <p class="project-description">UT Arlington’s Design Texas class of Fall 2016 was asked to design the program for Dallas VideoFest, the oldest and largest video festival in the United States. Under the direction of Hamid Hesami and based on the cover and poster design provided by SullivanPerkins, a total of 10 designers collaborated to produce this program.</p>
-    <img class="project-img" src="img/publication1_2.png">
+    <img class="project-img" src="img/publication1_0.png">
+   <p class="project-description1">Dallas VideoFest wants to rock the boat, push buttons, and take the new advent of media to the next level. </p>
+    <p class="project-description">Based on the program cover and poster provided by Sullivan Perkins, UT Arlington’s Design Texas class of Fall 2016 designed the program for Dallas VideoFest, the oldest and largest video festival in the United States. A total of 10 designers collaborated to produce this program under the direction of Hamid Hesami.
+</p>   
+  <div class="col-md-6 twocolumn-img">
     <img class="project-img" src="img/publication1_3.png">
+  </div>
+  <div class="col-md-6 twocolumn-img">
+    <img class="project-img" src="img/publication1_7.png">
+  </div> 
+    <img class="project-img" src="img/publication1_1.png">
     <img class="project-img" src="img/publication1_4.png">
+    <img class="project-img" src="img/publication1_2.png">
     <img class="project-img" src="img/publication1_5.png">
+    <img class="project-img" src="img/publication1_8.png">
+    <img class="project-img" src="img/publication1_6.png">
 </div>
 <!-- Other Works Section -->
 <div id="other-works">
