--- a/index.html
+++ b/index.html
@@ -75,6 +75,12 @@
     <img class="project-img" src="img/publication1_5.png">
     <img class="project-img" src="img/publication1_8.png">
     <img class="project-img" src="img/publication1_6.png">
+    <p class="project-description2">
+      Client: <font color="#939598"><strong>Bart Weiss, director of Dallas VideoFest</strong></font> <br>
+      Creative Directors: <font color="#939598"><strong>Hamid Hesami + Pauline Hudel-Smith</strong></font> <br>
+      Designers: <font color="#939598"><strong>Leah Brock, Sean Ficht, Daniel Gault, Kristal Hoang, Joanne Le, Anas Mohammed, Preston Porras, Austin Ryan </strong></font> <br> 
+      Category: <font color="#939598"><strong>Publication + Marketing</strong></font>
+    </p>
 </div>
 <!-- Other Works Section -->
 <div id="other-works">
@@ -85,26 +91,26 @@
   <div class="row">
     <div class="col-sm-6 col-md-3 col-lg-3">
       <div class="portfolio-item">
-        <a href="http://www.monicatn.design/dallas-videofest">
+        <a href="http://www.monicatn.design/dallas-publication">
           <div class="hover-bg">
             <div class="hover-text">
-              <h4>Mellow Hellos</h4>
-              <small>Branding</small> 
+              <h4>Kyo-Machiya</h4>
+              <small>Publication</small> 
             </div>
-            <img src="img/dv.png" class="img-responsive" alt="Dallas Video Fest">
+            <img src="img/m.png" class="img-responsive" alt="Kyo-Machiya">
           </div>
         </a>
       </div>
     </div>
     <div class="col-sm-6 col-md-3 col-lg-3">
       <div class="portfolio-item">
-        <a href="http://www.monicatn.design/mellow-hellos">
+        <a href="http://www.monicatn.design/dallas-publication">
           <div class="hover-bg"> 
             <div class="hover-text">
-              <h4>Mellow Hellos</h4>
-              <small>Branding</small> 
+              <h4>Dallas Guidebook</h4>
+              <small>Publication</small> 
             </div>
-            <img src="img/mh.png" class="img-responsive" alt="Mellow Hellos">
+            <img src="img/dg.png" class="img-responsive" alt="Dallas Guidebook">
           </div>
         </a>
       </div>
@@ -114,23 +120,23 @@
         <a href="http://www.monicatn.design/salsa-rebranding">
           <div class="hover-bg">
             <div class="hover-text">
-              <h4>Salsa Rebranding</h4>
+              <h4>Bacon Salsa Rebrand</h4>
               <small>Packaging</small> 
             </div>
-            <img src="img/salsa.png" class="img-responsive" alt="Salsa Rebranding"> 
+            <img src="img/as.png" class="img-responsive" alt="Salsa Rebranding"> 
           </div>
         </a>
       </div>
     </div>
     <div class="col-sm-6 col-md-3 col-lg-3">
       <div class="portfolio-item">
-        <a href="http://www.monicatn.design/texting-campaign">
+        <a href="http://www.monicatn.design/mellow-hellos">
           <div class="hover-bg">
             <div class="hover-text">
-              <h4>Salsa Rebranding</h4>
-              <small>Packaging</small> 
+              <h4>Mellow Hellos</h4>
+              <small>Branding</small> 
             </div>
-            <img src="img/texting.png" class="img-responsive" alt="Don’t Text and Drive Campaign"> 
+            <img src="img/mh.png" class="img-responsive" alt="Mellow Hellos"> 
           </div>
         </a>
       </div>
