--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
   <div class="row">
     <div class="col-sm-6 col-md-3 col-lg-3">
       <div class="portfolio-item">
-        <a href="http://www.monicatn.design/dallas-publication">
+        <a href="http://www.monicatn.design/kyo-machiya">
           <div class="hover-bg">
             <div class="hover-text">
               <h4>Kyo-Machiya</h4>
